--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
-
+# Spring properties
+spring.application.name=genbe
+spring.datasource.driver-class-name=org.postgresql.Driver
+# port dan nama database
+spring.datasource.url=jdbc:postgresql://localhost:5432/db_genbe
+# username postgres
+spring.datasource.username=postgres
+# password postgres
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=update
+# dialect yang digunakan adalah postgres
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL94Dialect
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.show-sql=true
+# HTTP Server
+server.port=1313
