form to database menggunakan file js

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 # Spring properties
 spring.application.name=genbe
+spring.freemarker.enabled=false
+spring.thymeleaf.cache=false  
 spring.datasource.driver-class-name=org.postgresql.Driver
 # port dan nama database
 spring.datasource.url=jdbc:postgresql://localhost:5432/db_genbe
@@ -12,5 +14,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL94Dialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.show-sql=true
+spring.jpa.cloud.refresh.enabled=false
+# Map the error path to error template (for Thymeleaf)
+error.path=/error
 # HTTP Server
 server.port=1212
